Modified @Autowired fields to be final and be injected through the constructor, and styled via the code styler